# clr-wallpapers

./: .gitignore  Makefile.am  autogen.sh  clearlinux-backgrounds.xml.in  clr-wallpapers.xml.in  configure.ac
Logo/: clearlinux_logo_cmyk.ai  clearlinux_logo_rbg.ai
Logotype/: clearlinux_logotype_cmyk.ai  clearlinux_logotype_rbg.ai
